src/test/resources/de/cd4analysis/cocos/mcg2ebnf/valid/CD4AC3008.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3008 {

	enum A;
	enum B {
		;
	}
	enum C {
		ENTRY, ENTRY2;
	}
}