src/test/resources/de/cd4analysis/cocos/mcg2ebnf/invalid/CD4AC3002.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3002 {
	class A {
		String a;
		public A();
	}
	class B {
		public B(String a);
		public B(String a, int b);
	}
}